// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check dark page against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainTabIndex={-1}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
      theme="dark"
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
      theme="dark"
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        >
          Navigation
        </div>
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page horizontal layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainTabIndex={-1}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify breadcrumb is created 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={<PageBreadcrumb />}
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainTabIndex={-1}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <section
        className="pf-c-page__main-breadcrumb"
      >
        <PageBreadcrumb>
          <Breadcrumb>
            <nav
              aria-label="Breadcrumb"
              className="pf-c-breadcrumb"
              data-ouia-component-id={0}
              data-ouia-component-type="PF4/Breadcrumb"
              data-ouia-safe={true}
            >
              <ol
                className="pf-c-breadcrumb__list"
              >
                <BreadcrumbItem
                  key=".0"
                  showDivider={false}
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    Section Home
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key=".1"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                      target={null}
                    >
                      Section Title
                    </a>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  key=".2"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      className="pf-c-breadcrumb__link"
                      href="#"
                      target={null}
                    >
                      Section Title
                    </a>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  isActive={true}
                  key=".3"
                  showDivider={true}
                  to="#"
                >
                  <li
                    className="pf-c-breadcrumb__item"
                  >
                    <span
                      className="pf-c-breadcrumb__item-divider"
                    >
                      <AngleRightIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 256 512"
                          width="1em"
                        >
                          <path
                            d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                            transform=""
                          />
                        </svg>
                      </AngleRightIcon>
                    </span>
                    <a
                      aria-current="page"
                      className="pf-c-breadcrumb__link pf-m-current"
                      href="#"
                      target={null}
                    >
                      Section Landing
                    </a>
                  </li>
                </BreadcrumbItem>
              </ol>
            </nav>
          </Breadcrumb>
        </PageBreadcrumb>
      </section>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page to verify skip to content points to main content region 1`] = `
<Page
  aria-label="Page layout"
  breadcrumb={
    <Breadcrumb>
      <BreadcrumbItem>
        Section Home
      </BreadcrumbItem>
      <BreadcrumbItem
        to="#"
      >
        Section Title
      </BreadcrumbItem>
      <BreadcrumbItem
        to="#"
      >
        Section Title
      </BreadcrumbItem>
      <BreadcrumbItem
        isActive={true}
        to="#"
      >
        Section Landing
      </BreadcrumbItem>
    </Breadcrumb>
  }
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainContainerId="main-content-page-layout-test-nav"
  mainTabIndex={-1}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
    />
  }
  skipToContent={
    <SkipToContent
      href="#main-content-page-layout-test-nav"
      show={false}
    >
      Skip to Content
    </SkipToContent>
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <SkipToContent
      href="#main-content-page-layout-test-nav"
      show={false}
    >
      <a
        className="pf-c-button pf-m-primary pf-c-skip-to-content"
        href="#main-content-page-layout-test-nav"
      >
        Skip to Content
      </a>
    </SkipToContent>
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      topNav="Navigation"
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-nav"
        >
          Navigation
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        />
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      id="main-content-page-layout-test-nav"
      tabIndex={-1}
    >
      <section
        className="pf-c-page__main-breadcrumb"
      >
        <Breadcrumb>
          <nav
            aria-label="Breadcrumb"
            className="pf-c-breadcrumb"
            data-ouia-component-id={1}
            data-ouia-component-type="PF4/Breadcrumb"
            data-ouia-safe={true}
          >
            <ol
              className="pf-c-breadcrumb__list"
            >
              <BreadcrumbItem
                key=".0"
                showDivider={false}
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  Section Home
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                key=".1"
                showDivider={true}
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                  <a
                    className="pf-c-breadcrumb__link"
                    href="#"
                    target={null}
                  >
                    Section Title
                  </a>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                key=".2"
                showDivider={true}
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                  <a
                    className="pf-c-breadcrumb__link"
                    href="#"
                    target={null}
                  >
                    Section Title
                  </a>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                isActive={true}
                key=".3"
                showDivider={true}
                to="#"
              >
                <li
                  className="pf-c-breadcrumb__item"
                >
                  <span
                    className="pf-c-breadcrumb__item-divider"
                  >
                    <AngleRightIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="sm"
                    >
                      <svg
                        aria-hidden={true}
                        aria-labelledby={null}
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style={
                          Object {
                            "verticalAlign": "-0.125em",
                          }
                        }
                        viewBox="0 0 256 512"
                        width="1em"
                      >
                        <path
                          d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                          transform=""
                        />
                      </svg>
                    </AngleRightIcon>
                  </span>
                  <a
                    aria-current="page"
                    className="pf-c-breadcrumb__link pf-m-current"
                    href="#"
                    target={null}
                  >
                    Section Landing
                  </a>
                </li>
              </BreadcrumbItem>
            </ol>
          </nav>
        </Breadcrumb>
      </section>
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page vertical layout example against snapshot 1`] = `
<Page
  aria-label="Page layout"
  className="my-page-class"
  defaultManagedSidebarIsOpen={true}
  header={
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    />
  }
  id="PageId"
  isManagedSidebar={false}
  mainTabIndex={-1}
  onPageResize={[Function]}
  sidebar={
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <PageHeader
      headerTools="PageHeaderTools | Avatar"
      logo="Logo"
      onNavToggle={[Function]}
    >
      <header
        className="pf-c-page__header"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        PageHeaderTools | Avatar
      </header>
    </PageHeader>
    <PageSidebar
      isNavOpen={true}
      nav="Navigation"
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        <div
          className="pf-c-page__sidebar-body"
        >
          Navigation
        </div>
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      tabIndex={-1}
    >
      <PageSection
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;
